--- a/Reactjs-frontend/package.json
+++ b/Reactjs-frontend/package.json
@@ -12,11 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-<<<<<<< HEAD
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
-=======
-    "react-icons": "^5.2.1"
->>>>>>> 6c9e771e017fd7034a248ccb912e65899c5e82ce
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
