--- a/Reactjs-frontend/package.json
+++ b/Reactjs-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "locomotive-scroll": "^5.0.0-beta.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
