Created login and signup functionality

--- a/Reactjs-frontend/package.json
+++ b/Reactjs-frontend/package.json
@@ -14,6 +14,7 @@
     "locomotive-scroll": "^5.0.0-beta.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3"
