--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://parthbrajput30:123456mb@cluster0.ivohj7r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+TOKEN_SECRET=mysecrettoken
