--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "react-dom": "^18.3.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-qr-barcode-scanner": "^1.0.6",
     "react-qr-reader": "^2.2.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-webcam-qr-scanner": "^1.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
