--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "boxicons": "^2.1.4",
     "framer-motion": "^11.2.4",
     "jsqr": "^1.4.0",
     "react": "^18.3.0",
