--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.2.4",
     "jsqr": "^1.4.0",
     "react": "^18.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
