--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "twilio": "^5.1.1",
     "web-vitals": "^2.1.4"
